--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,8 @@
 }
 
 @font-face {
-  font-family: "Kumar";
-  src: url("/fonts/KumarOne-Regular.ttf") format("truetype");
+  font-family: "Oswald";
+  src: url("/fonts/Oswald-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
